@@ -8620,6 +8620,10 @@
       <key>String_RestrictedItemsHidden</key>
       <text>* {0} item(s) are hidden by Cost or Availability limits *</text>
     </string>
+    <string>
+      <key>String_RestrictedItemsHiddenMount</key>
+      <text>* {0} item(s) are hidden due to mount restrictions *</text>
+    </string>
     <!-- End Region -->
     <!-- Region Select Armor Window -->
     <string>
